--- a/Linvest/Investimentos/investimentos.css
+++ b/Linvest/Investimentos/investimentos.css
@@ -73,3 +73,16 @@ ul {
 ul li {
     margin-bottom: 10px;
 }
+.nav-btn {
+    font-size: 30px;
+    cursor: pointer;
+    padding: 10px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 2;
+}
