--- a/Linvest/Suporte/suporte.css
+++ b/Linvest/Suporte/suporte.css
@@ -87,3 +87,17 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color: #555;
 }
+
+.nav-btn {
+    font-size: 30px;
+    cursor: pointer;
+    padding: 10px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 2;
+}
