--- a/Linvest/Teste de QI/qi.css
+++ b/Linvest/Teste de QI/qi.css
@@ -172,3 +172,16 @@ button:hover {
     color: #333;
     font-weight: bold;
 }
+.nav-btn {
+    font-size: 30px;
+    cursor: pointer;
+    padding: 10px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 2;
+}
