--- a/Linvest/etfs/etfs.css
+++ b/Linvest/etfs/etfs.css
@@ -104,3 +104,16 @@
         margin-top: 20px;
         font-weight: bold;
     }
+    .nav-btn {
+        font-size: 30px;
+        cursor: pointer;
+        padding: 10px;
+        background-color: #333;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        position: fixed;
+        top: 10px;
+        left: 10px;
+        z-index: 2;
+    }
