--- a/Linvest/Investimentos/investimentos.css
+++ b/Linvest/Investimentos/investimentos.css
@@ -2,63 +2,48 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: #fcdcb8d3;
 }
 header {
-    background-color: #000000;
+    background-color: #e2b683d3;
     color: #fff;
     padding: 10px;
     text-align: center;
-    height:70px;
-    width:1900px;
-    border: 3px solid rgb(0, 0, 0);
 }
-/* Estilos para o menu de navegação lateral */
-.sidenav {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #000000;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
+
+/* Estilos para a navbar horizontal */
+.navbar {
+    background-color: #e2b683d3;
+    overflow: hidden;
 }
-.sidenav a {
-    padding: 16px 8px 16px 32px;
-    text-decoration: none;
-    font-size: 18px;
-    color: #fff;
+.navbar a {
+    float: left;
     display: block;
-    transition: 0.3s;
+    color: #fff;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
 }
-.sidenav a:hover {
-    color: #ffd700;
+.navbar a:hover {
+    background-color: rgb(255, 255, 255);
+    color: black;
 }
-.sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-}
-/* Estilos para o conteúdo */
+
 .main {
     transition: margin-left 0.5s;
     padding: 20px;
-    margin-left: 250px;
-    display: flex;
+    margin-left: 0; /* Corrigido para 0 */
 }
-
+.section-container {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-bottom: 20px;
+}
 .section-container h2 {
-    color: #171717;
+    color: #333;
     margin-bottom: 10px;
-}
-.section-container h3 {
-    color: #555;
-    margin-top: 20px;
 }
 .section-container p {
     color: #555;
@@ -66,49 +51,8 @@ header {
 }
 ul {
     list-style-type: none;
-    padding: 10;
+    padding: 0;
 }
 ul li {
-    margin-bottom: 10px;
-}
-.nav-btn {
-    font-size: 30px;
-    cursor: pointer;
-    padding: 10px;
-    background-color: #000000;
-    color: #fcfcfc;
-    border: none;
-    border-radius: 5px;
-    position: fixed;
-    top: 10px;
-    left: 10px;
-    z-index: 2;
-}
-
-.section-container {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin-bottom: 20px;
-    width: 200px;
-    margin: 10%;
-} 
-
-.section-container2 {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin-bottom: 20px;
-    width: 200px;
-}
-
-.section-container3 {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin-bottom: 20px;
-    width: 200px;
+    margin-bottom: 5px;
 }
