--- a/Linvest/PRINCIPAL/principal.css
+++ b/Linvest/PRINCIPAL/principal.css
@@ -2,37 +2,69 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #fcdcb8d3;
+    background-color: #f4f4f4;
 }
 header {
-    background-color: #e2b683d3;
+    background-color: #333;
     color: #fff;
     padding: 10px;
     text-align: center;
 }
-
-/* Estilos para a navbar horizontal */
-.navbar {
-    background-color: #e2b683d3;
-    overflow: hidden;
+/* Estilos para o menu de navegação lateral */
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #444;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
 }
-.navbar a {
-    float: left;
-    display: block;
-    color: #fff;
-    text-align: center;
-    padding: 14px 20px;
+.sidenav a {
+    padding: 16px 8px 16px 32px;
     text-decoration: none;
+    font-size: 18px;
+    color: #fff;
+    display: block;
+    transition: 0.3s;
 }
-.navbar a:hover {
-    background-color: rgb(255, 255, 255);
-    color: black;
+.sidenav a:hover {
+    color: #ffd700;
 }
-
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+/* Estilos para o botão de navegação */
+.nav-btn {
+    font-size: 30px;
+    cursor: pointer;
+    padding: 10px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 2;
+}
+/* Estilos para o conteúdo */
 .main {
     transition: margin-left 0.5s;
     padding: 20px;
-    margin-left: 0; /* Corrigido para 0 */
+    display: grid;
+    grid-template-columns: auto auto auto;
+    row-gap: 50px;
+    gap: 50px;
+    position: relative;
+    top:100px;
 }
 .section-container {
     background-color: #fff;
@@ -41,18 +73,17 @@ header {
     padding: 20px;
     margin-bottom: 20px;
 }
-.section-container h2 {
-    color: #333;
-    margin-bottom: 10px;
+.section-container2 {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-bottom: 20px;
 }
-.section-container p {
-    color: #555;
-    line-height: 1.5;
-}
-ul {
-    list-style-type: none;
-    padding: 0;
-}
-ul li {
-    margin-bottom: 5px;
+.section-container3{
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-bottom: 20px;
 }
