--- a/Linvest/Suporte/suporte.css
+++ b/Linvest/Suporte/suporte.css
@@ -2,37 +2,50 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #fcdcb8d3;
+    background-color: #f4f4f4;
 }
 header {
-    background-color: #e2b683d3;
+    background-color: #333;
     color: #fff;
     padding: 10px;
     text-align: center;
 }
-
-/* Estilos para a navbar horizontal */
-.navbar {
-    background-color: #e2b683d3;
-    overflow: hidden;
+/* Estilos para o menu de navegação lateral */
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #444;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
 }
-.navbar a {
-    float: left;
-    display: block;
-    color: #fff;
-    text-align: center;
-    padding: 14px 20px;
+.sidenav a {
+    padding: 16px 8px 16px 32px;
     text-decoration: none;
+    font-size: 18px;
+    color: #fff;
+    display: block;
+    transition: 0.3s;
 }
-.navbar a:hover {
-    background-color: rgb(255, 255, 255);
-    color: black;
+.sidenav a:hover {
+    color: #ffd700;
 }
-
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+/* Estilos para o conteúdo */
 .main {
     transition: margin-left 0.5s;
     padding: 20px;
-    margin-left: 0; /* Corrigido para 0 */
+    margin-left: 250px;
 }
 .section-container {
     background-color: #fff;
