--- a/Linvest/PRINCIPAL/principal.css
+++ b/Linvest/PRINCIPAL/principal.css
@@ -29,6 +29,7 @@ header {
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
+
 }
 .sidenav a {
     padding: 16px 8px 16px 32px;
@@ -64,31 +65,34 @@ header {
 }
 /* Estilos para o conteúdo */
 .main {
-    transition: margin-left 0.5s;
-    padding: 20px;
-    margin-top: 50px;
-    
+  transition: margin-left 0.5s;
+  padding: 20px;
+  margin-top: 50px;
+  
 }
 #container1 {
-    background-color: hsl(0, 45%, 98%);
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin-bottom: 20px;
+  background-color: hsl(0, 45%, 98%);
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  padding: 30px;
+  margin-bottom: 20px;
+  filter: drop-shadow(15px 5px 5px black);
 }
 #container2 {
-    background-color: hsl(0, 45%, 98%);
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin-bottom: 20px;
+  background-color: hsl(0, 45%, 98%);
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  padding: 30px;
+  margin-bottom: 20px;
+  filter: drop-shadow(15px 5px 5px black);
 }
 #container3{
-    background-color: hsl(0, 45%, 98%);
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin-bottom: 20px;
+  background-color: hsl(0, 45%, 98%);
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  padding: 30px;
+  margin-bottom: 20px;
+  filter: drop-shadow(15px 5px 5px black);
 }
 
 #Investimentos-texto{
@@ -108,90 +112,12 @@ header {
 }
 
 
-* {box-sizing:border-box}
-
-
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
+*{
+  box-sizing:border-box
 }
 
 
-.mySlides {
-  display: none;
-}
-
-
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-
-.fade {
-  animation-name: fade;
-  animation-duration: 1s;
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+#principal{
+    position: relative;
+    top: -15px;
 }
